--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,33 @@
+:root {
+  --primary-color: rgb(105, 72, 248);
+  --secondary-color: rgb(129, 101, 255);
+  --bg-primary-color: #f8f9fa;
+  --secondary-text-color: #6c757d;
+  --success-color: #28a745;
+  --info-color: #17a2b8;
+  --warning-color: #ffc107;
+  --danger-color: #dc3545;
+  --sidebar-width: 80px;
+  --sidebar-color: rgb(196, 200, 230);
+  --approved-background-color: rgb(206, 245, 210);
+  --pending-background-color: rgb(246, 235, 205);
+  --rejected-background-color: rgb(252, 220, 214);
+  --approved-text-color: #029b5b;
+  --pending-text-color: #ffac07;
+  --rejected-text-color: #af0b0b;
+}
+
+html {
+  box-sizing: border-box;
+}
+
 body {
-  margin: 0;
+  display: flex;
+  justify-content: center;
+  min-width: 375px;
+  max-width: 1000px;
+  margin: var(--sidebar-width) auto 0 auto;
+  background-color: var(--bg-primary-color);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +35,81 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  width: 100%;
+}
+
+#userSelect-block {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+
+#new-user-button {
+  margin-left: 30px;
+}
+
+.table-block {
+  margin-top: 30px;
+  width: 100%;
+  height: 600px;
+}
+
+.vacation-item {
+  display: flex;
+  width: 95%;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px 0;
+  border-bottom: 1px solid #e0e0e0;
+  font-size: medium;
+
+  .item-name {
+    width: 18%;
+    font-weight: bold;
+  }
+
+  .item-start {
+    width: 10%;
+  }
+
+  .item-end {
+    width: 10%;
+  }
+
+  .item-reason {
+    width: 18%;
+  }
+
+  .item-status {
+    width: 10%;
+    padding: 5px;
+    text-align: center;
+  }
+
+  .item-comments {
+    width: 20%;
+  }
+
+  .item-action {
+    width: 10%;
+  }
+
+  .approved {
+    color: var(--approved-text-color);
+    background-color: var(--approved-background-color);
+  }
+
+  .pending {
+    color: var(--pending-text-color);
+    background-color: var(--pending-background-color);
+  }
+
+  .rejected {
+    color: var(--rejected-text-color);
+    background-color: var(--rejected-background-color);
+  }
 }
